tdf#117433 count empty cells properly with COUNTIF.

All empty columns after the first column of the range were skipped.
When the query contains an 'cell is empty' expression, skipping is omitted.

Change-Id: I0d5b0d24c2d08bad88479cd5b356529a0a709156
Reviewed-on: https://gerrit.libreoffice.org/54021
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 1a8febcaa4f932124d417877a3b08bd059c0362d)
Reviewed-on: https://gerrit.libreoffice.org/54037
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 9b2ebcfe80900b2f6299851d3a271bdcaa85049a)